fix: skill section align issue
skill: adding DSA in learningTech list

--- a/src/style/responsive.css
+++ b/src/style/responsive.css
@@ -91,6 +91,8 @@
         display: flex;
         flex-direction: column;
         margin-bottom: 1rem;
+        align-items: center !important;
+        padding-top: 0% !important;
     }
 
     /* Project Section */
